# fl-studio-backup-cleaner

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flcleaner/: app.py
src/flcleaner/core/: clean.py  scan.py
src/flcleaner/utils/: logging_setup.py
src/flcleaner/widgets/: main_window.py
