[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-backup-cleaner"
version = "0.1.0"
description = "FL Studio backup cleaner with PySide6"
authors = [{name = "RaniFar"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PySide6>=6.6", "send2trash>=1.8.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"flcleaner" = ["*"]
